# RE4-Mod-Manager-CLI

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml  setup.py
.github/: CODEOWNERS  pull_request_template.md
.github/actions/setup/: action.yaml
.github/workflows/: deployment.yml  push.yml  re4cicd.yml  tag-release.yml
app/cli/: config.py  mods.py
app/exceptions/: auth.py  file.py
app/models/: nexus.py
app/models/CLI/: config.py  game.py
app/services/: auth.py  nexus.py
pre-commit-scripts/: bump-poetry.py  bump-version.py  check-poetry.py  run-linting.bat  run-poetry.bat  run-tests.bat
tests/: conftest.py
tests/cli/: test_retrieve_mods.py
tests/services/: test_nexus.py
tf/: code_artifact.tf  provider.tf
